FIX: Jump Autoslider

--- a/src/assets/Mixins/Animation.scss
+++ b/src/assets/Mixins/Animation.scss
@@ -120,7 +120,7 @@
 @mixin auto-scroll-animation($name) {
     @keyframes #{$name} {
             to {
-              transform: translate(calc(-50% - 0.5rem));
+              transform: translate(calc(-50% - 4px));
             }
           }
       }
